--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,97 @@
+:root {
+	--red: rgb(222, 0, 0);
+	--yellow: rgb(222, 215, 0);
+	--green: rgb(0, 222, 89);
+	--blue: rgb(0, 107, 222);
+	--purple: rgb(85, 0, 222);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	text-align: center;
+	font-size: calc(10px + 2vmin);
+	display: flex;
+	flex-direction: column;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	height: 8vh;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: left;
+	background-color: white;
+	padding-left: 4rem;
+	box-shadow: 0px 0px 12px 12px #f8f8f8;
 }
 
-.App-link {
-  color: #61dafb;
+.App-logo {
+	pointer-events: none;
+	text-decoration: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (prefers-reduced-motion: no-preference) {
+	.App-logo {
+		animation: App-logo-color infinite 20s linear;
+	}
+}
+
+@keyframes App-logo-color {
+	0% {
+		/* transform: rotate(0deg); */
+		color: var(--red);
+	}
+	12% {
+		color: var(--yellow);
+	}
+	25% {
+		color: var(--green);
+	}
+	37% {
+		color: var(--blue);
+	}
+	50% {
+		color: var(--purple);
+	}
+	67% {
+		color: var(--blue);
+	}
+	75% {
+		color: var(--green);
+	}
+	87% {
+		color: var(--yellow);
+	}
+	100% {
+		color: var(--red);
+	}
+}
+
+.main form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 5rem;
+}
+.main input[type="text"] {
+	padding: 12px 16px;
+	border: 1px solid #10a37f;
+	border-radius: 4px;
+	margin-bottom: 24px;
+}
+.main ::placeholder {
+	color: #8e8ea0;
+	opacity: 1;
+}
+.main input[type="submit"] {
+	padding: 12px 0;
+	color: #fff;
+	background-color: #10a37f;
+	border: none;
+	border-radius: 4px;
+	text-align: center;
+	cursor: pointer;
+}
+.main .result {
+	font-weight: bold;
+	margin-top: 40px;
 }
