--- a/styles/Track.module.scss
+++ b/styles/Track.module.scss
@@ -1,14 +1,69 @@
+.headerLeft {
+	display: flex;
+	align-items: center;
+}
+
 .logoContainer {
 	margin-right: 2rem;
+	vertical-align: middle;
+	display: flex;
+	align-items: center;
 }
 
 .main {
 	display: flex;
 	overflow: hidden;
 	flex-direction: row;
+
+	.middlePanel {
+		display: flex;
+		flex: 4;
+		flex-direction: column;
+		text-align: left;
+		padding: 2rem 4rem;
+		// border: 1px solid red;
+
+		.formSection {
+			margin-bottom: 1rem;
+		}
+
+		.imageSection {
+			margin: 1rem 0;
+			// border: 1px solid red;
+
+			.imgSectTitle {
+				font-weight: 600;
+				margin-bottom: 1rem;
+			}
+
+			.gallery {
+				display: grid;
+				grid-template-columns: repeat(auto-fit, minmax(256px, 1fr));
+				grid-gap: 16px;
+
+				.imageContainer {
+					aspect-ratio: 1;
+					position: relative;
+					overflow: hidden;
+
+					.dallEImage {
+						object-fit: cover;
+					}
+				}
+			}
+		}
+
+		.slideshowSection {
+		}
+
+		.playerSection {
+		}
+	}
 }
 
 .leftPanel {
+	flex: 1;
+	width: 20%;
 }
 
 .rightPanel {
