Updates from capstone. Added a loading spinner. Moved generatePrompt() and generateImages() to a useEffect()

--- a/components/form.module.scss
+++ b/components/form.module.scss
@@ -47,6 +47,11 @@
 	cursor: pointer;
 }
 
+.submitButton:hover {
+	color: rgb(189, 189, 189);
+	text-decoration: bold;
+}
+
 .randomize {
 	color: $greyText;
 	margin-top: 24px;
