--- a/styles/Track.module.scss
+++ b/styles/Track.module.scss
@@ -27,6 +27,14 @@
 			margin-bottom: 1rem;
 		}
 
+		.spinnerContainer {
+			display: flex;
+			margin-top: 4rem;
+			// border: 1px solid red;
+			justify-content: center;
+			align-items: center;
+		}
+
 		.imageSection {
 			margin: 1rem 0;
 			// border: 1px solid red;
@@ -57,6 +65,8 @@
 		}
 
 		.playerSection {
+			position: absolute;
+			bottom: 0;
 		}
 	}
 }
